# filescan

./: .gitignore  .pre-commit-config.yaml  Makefile  Production.ipynb  README.md  alembic.ini  basic.py  filescan.ipy  filescan.py  load_tokens.py  mongo_store.py  postgresql_store.py  pyproject.toml  sqlalchemy_store.py  sqlite_store.py  test_storage.py
alembic/: env.py
alembic/versions/: 09f07436f266_catch_any_extra_bits.py  236ace2b5fcf_.py  6af913e7a179_correct_relationship_between_runlog_and_.py  79a7aa53d735_.py  7a53f6257f5f_.py  7c731a5adc8b_initial_database.py  b4f509916881_.py  d2789c60a945_.py  d9e23a3d2ca2_add_relationship_between_runlog_and_.py
src/filescan/: __init__.py  __main__.py  filescan_python.py  sqlalchemy_store.py
tests/: test_storage.py
