[tool.poetry]
name = "filescan"
version = "0.0.1"
description = "A tool for tracking files and Python source"
authors = ["Steve Holden <steve@holdenweb.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2-binary = "^2.9.9"
mongoengine = "^0.27.0"
sqlalchemy = "^2.0.23"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
mypy = "^1.7.1"
types-psycopg2 = "^2.9.21.20"
mongoengine-stubs = "^0.24.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
